# prettier-cc

./: Cargo.toml  README.md  install-tui.sh  install.sh
.github/workflows/: ci.yml  release.yml
config/: config.toml
crates/continuum-cli/: Cargo.toml
crates/continuum-cli/src/: main.rs
crates/continuum-daemon/: Cargo.toml
crates/continuum-daemon/src/: config.rs  main.rs  minimap.rs  persistence.rs  protocol.rs  transcript.rs
crates/continuum-tui/: Cargo.toml
crates/continuum-tui/src/: chat.rs  main.rs
crates/rewind-cli/: Cargo.toml
crates/rewind-cli/src/: main.rs
crates/rewind-daemon/: Cargo.toml
crates/rewind-daemon/src/: config.rs  lib.rs  listener.rs  main.rs  minimap.rs  persistence.rs  session.rs  transcript.rs
crates/rewind-tui/: Cargo.toml
crates/rewind-tui/src/: embedded.rs  main.rs
shell/: continuum.bash  continuum.fish  continuum.zsh  rewind.bash  rewind.fish  rewind.zsh
