[package]
name = "continuum-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for visualizing Claude Code conversation history"

[[bin]]
name = "continuum"
path = "src/main.rs"

[dependencies]
continuum-daemon = { path = "../continuum-daemon" }
serde_json = "1"
dirs = "6"
