[package]
name = "continuum-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Indexing daemon for Continuum – Claude Code session history navigation"

[[bin]]
name = "continuumd"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
indexmap = "2"
notify = "8"

[lib]
name = "continuum_core"
path = "src/lib.rs"
