[package]
name = "rewind-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for visualizing Claude Code conversation history and rewind checkpoints"

[[bin]]
name = "rewind"
path = "src/main.rs"

[dependencies]
rewind-daemon = { path = "../rewind-daemon" }
serde_json = "1"
dirs = "6"
